--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,7 @@ license={text="MIT"}
 requires-python=">=3.5"
 [tool.setuptools]
 include-package-data=true
+[project.urls]
+Repository="https://github.com/Jelmerro/carafe"
 [project.scripts]
 carafe="carafe:main"
